--- a/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a0ba770d2ed3a60b265638b1560897b51a2c939b
-ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
+ms.openlocfilehash: c0377e55239426c38048dac336950ca08931ecab
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 03/06/2019
-ms.locfileid: "30413908"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656702"
 items:
 - uid: outlook.Office.AppointmentCompose
-  summary: "\" [context.subname](xref:outlook.Office.Item)<!-- -->\" 的约会组织者模式。\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/preview-requirement-set/office.context.mailbox.item)页。"
+  summary: >-
+    Office 的约会组织者模式。 [item](xref:outlook.Office.Item)<!-- -->.
+
+
+    **重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 "context.subname" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/preview-requirement-set/office.context.mailbox.item)页。
   name: Office.AppointmentCompose
   fullName: Office.AppointmentCompose
   langs:
@@ -266,7 +270,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -304,7 +308,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -570,7 +574,7 @@ items:
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> </table>
 
 
-    有关可[操作邮件](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)<!-- -->的详细信息。
+    有关可[操作邮件](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)的详细信息<!-- -->.
   isPreview: true
   name: getInitializationContextAsync(options, callback)
   fullName: getInitializationContextAsync(options, callback)
@@ -605,7 +609,7 @@ items:
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> </table>
 
 
-    有关可[操作邮件](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)<!-- -->的详细信息。
+    有关可[操作邮件](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)的详细信息<!-- -->.
   isPreview: true
   name: getInitializationContextAsync(callback)
   fullName: getInitializationContextAsync(callback)
@@ -841,7 +845,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -875,7 +879,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1112,7 +1116,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message as plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -1535,7 +1539,7 @@ items:
     在 OWA 和 Outlook 中, webcasts&seriesid 返回此项所属的父 (系列) 项的 Exchange Web 服务 (EWS) ID。 但是, 在 iOS 和 Android 中, webcasts&seriesid 返回父项的 REST ID。
 
 
-    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅使用 outlook 外接<!-- -->[程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)。
+    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅[使用 outlook 外接程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->.
 
 
     对于不包含父项目 (如单个约会、系列项目或会议请求) 的项目, webcasts&seriesid 属性将返回 null, 并且对于不是会议请求的任何其他项目, 返回 "未定义"。
