--- a/docs/docs-ref-autogen/outlook_1_1/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.appointmentcompose.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4550437b52643a054584beb5a33d02653a8b7caa
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: 00eceab6ba221709eaf3db9f535d077b3daf92a8
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30199045"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656582"
 items:
 - uid: Outlook_1_1.Office.AppointmentCompose
-  summary: "\" [context.subname](xref:Outlook_1_1.Office.Item)<!-- -->\" 的约会组织者模式。\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.1/office.context.mailbox.item)页。"
+  summary: >-
+    Office 的约会组织者模式。 [item](xref:Outlook_1_1.Office.Item)<!-- -->.
+
+
+    **重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 "context.subname" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.1/office.context.mailbox.item)页。
   name: Office.AppointmentCompose
   fullName: Office.AppointmentCompose
   langs:
@@ -381,7 +385,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message as plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
