--- a/docs/docs-ref-autogen/outlook_1_1/office.item.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: be0e4e0c518014521f9992db044530f97a2dc790
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: 1e28f4007e5740aec1069ad79da6a668c8bd8788
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30198261"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656876"
 items:
 - uid: Outlook_1_1.Office.Item
   summary: >-
@@ -28,10 +28,10 @@ items:
     异步加载所选项目上此外接程序的自定义属性。
 
 
-    自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 CustomProperties，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。
+    自定义属性基于每个应用、每个项目存储为键/值对。 此方法在回调中返回一个 CustomProperties 对象, 该对象提供用于访问特定于当前项目和当前加载项的自定义属性的方法。 自定义属性未在项目上加密，因此这不应用作安全存储。
 
 
-    自定义属性作为 asyncResult.value 属性中的 CustomProperties 对象提供。此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
+    自定义属性作为 asyncResult 属性中的 CustomProperties 对象提供。 此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -115,7 +115,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -148,7 +148,7 @@ items:
     获取实例表示的项的类型。
 
 
-    itemType 属性返回其中一个 ItemType 枚举值，指示 item 对象实例是邮件还是约会。
+    itemtype 属性返回一个 itemType 枚举值, 指示 item 对象实例是邮件还是约会。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
