--- a/docs/docs-ref-autogen/outlook_1_7/office.item.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7b421111950086a76e0465bfd6317f4fb9ee0b39
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: 8b0e57a1fb05335afa851d5af3268118ab367140
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30198877"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656645"
 items:
 - uid: Outlook_1_7.Office.Item
   summary: >-
@@ -34,7 +34,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -56,7 +56,7 @@ items:
       type:
       - Office.EventType
     - id: handler
-      description: 处理事件的函数。 函数必须接受单个参数, 该参数是对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
+      description: 用于处理事件的函数。 此函数必须接受一个参数，即对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
       type:
       - any
     - id: options
@@ -72,7 +72,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -113,7 +113,7 @@ items:
       type:
       - Office.EventType
     - id: handler
-      description: 处理事件的函数。 函数必须接受单个参数, 该参数是对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
+      description: 用于处理事件的函数。 此函数必须接受一个参数，即对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
       type:
       - any
     - id: callback
@@ -125,10 +125,10 @@ items:
     异步加载所选项目上此外接程序的自定义属性。
 
 
-    自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 CustomProperties，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。
+    自定义属性基于每个应用、每个项目存储为键/值对。 此方法在回调中返回一个 CustomProperties 对象, 该对象提供用于访问特定于当前项目和当前加载项的自定义属性的方法。 自定义属性未在项目上加密，因此这不应用作安全存储。
 
 
-    自定义属性作为 asyncResult.value 属性中的 CustomProperties 对象提供。此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
+    自定义属性作为 asyncResult 属性中的 CustomProperties 对象提供。 此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -203,7 +203,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -237,7 +237,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -276,7 +276,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -309,7 +309,7 @@ items:
     获取实例表示的项的类型。
 
 
-    itemType 属性返回其中一个 ItemType 枚举值，指示 item 对象实例是邮件还是约会。
+    itemtype 属性返回一个 itemType 枚举值, 指示 item 对象实例是邮件还是约会。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -373,13 +373,13 @@ items:
       - NotificationMessages
 - uid: Outlook_1_7.Office.Item.seriesId
   summary: >-
-    获取实例所属的系列的 ID。
+    获取实例所属的系列的 id。
 
 
     在 OWA 和 Outlook 中, webcasts&seriesid 返回此项所属的父 (系列) 项的 Exchange Web 服务 (EWS) ID。 但是, 在 iOS 和 Android 中, webcasts&seriesid 返回父项的 REST ID。
 
 
-    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅使用 outlook 外接<!-- -->[程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)。
+    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅[使用 outlook 外接程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->.
 
 
     对于不包含父项目 (如单个约会、系列项目或会议请求) 的项目, webcasts&seriesid 属性将返回 null, 并且对于不是会议请求的任何其他项目, 返回 "未定义"。
