--- a/docs/docs-ref-autogen/excel/excel.commentreplycollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.commentreplycollection.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 876f05868c80289fb718b020d6d8187cc96a83af
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 21d241c51150020041a91a89c874c1407dab6edf
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116890"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656638"
 items:
 - uid: excel.Excel.CommentReplyCollection
   summary: >-
@@ -35,7 +35,7 @@ items:
   - excel.Excel.CommentReplyCollection.toJSON
 - uid: excel.Excel.CommentReplyCollection.add
   summary: >-
-    为批注创建批注答复。
+    为批注创建批注回复。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -50,7 +50,7 @@ items:
     return:
       type:
       - excel.Excel.CommentReply
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const comment = context.workbook.comments.getItemByCell(\"Comments!A1\");\n    comment.replies.add(\"Do I have to?\");\n    await context.sync();\n});\n```"
     parameters:
     - id: content
       description: 注释内容。
@@ -62,7 +62,7 @@ items:
       - excel.Excel.ContentType
 - uid: excel.Excel.CommentReplyCollection.add_1
   summary: >-
-    为批注创建批注答复。
+    为批注创建批注回复。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -102,7 +102,7 @@ items:
       - RequestContext
 - uid: excel.Excel.CommentReplyCollection.getCount
   summary: >-
-    获取集合中的批注答复数。
+    获取集合中的批注回复数量。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -120,7 +120,7 @@ items:
       description: ''
 - uid: excel.Excel.CommentReplyCollection.getItem
   summary: >-
-    返回由其 ID 标识的注释答复。 只读。
+    返回由其 ID 标识的批注回复。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -143,7 +143,7 @@ items:
       - string
 - uid: excel.Excel.CommentReplyCollection.getItemAt
   summary: >-
-    根据其在集合中的位置获取批注答复。
+    根据其在集合中的位置获取批注回复。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -161,11 +161,11 @@ items:
       description: ''
     parameters:
     - id: index
-      description: 要检索的对象的索引值。从零开始编制索引。
+      description: 要检索的对象的索引值。 从零开始编制索引。
       type:
       - number
 - uid: excel.Excel.CommentReplyCollection.items
-  summary: 获取此集合中的已加载子项目。
+  summary: 获取此集合中已加载的子项。
   isPreview: true
   name: items
   fullName: items
@@ -178,7 +178,7 @@ items:
       type:
       - Excel.CommentReply[]
 - uid: excel.Excel.CommentReplyCollection.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -208,7 +208,7 @@ items:
       type:
       - Excel.Interfaces.CommentReplyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
 - uid: excel.Excel.CommentReplyCollection.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -245,7 +245,7 @@ items:
       type:
       - office.OfficeExtension.LoadOption
 - uid: excel.Excel.CommentReplyCollection.toJSON
-  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。 (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)虽然原始`Excel.CommentReplyCollection`对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.CommentReplyCollectionData` <!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
+  summary: 重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.CommentReplyCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.CommentReplyCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
   isPreview: true
   name: toJSON()
   fullName: toJSON()
