--- a/docs/docs-ref-autogen/outlook/office.item.yml
+++ b/docs/docs-ref-autogen/outlook/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 003c3d4daf3a24c35bde443f1132146e8ea58f88
-ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
+ms.openlocfilehash: 410c980b21f11e8914a806819abe1d8979964d11
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 03/06/2019
-ms.locfileid: "30413866"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656940"
 items:
 - uid: outlook.Office.Item
   summary: >-
@@ -40,7 +40,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -78,7 +78,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -234,7 +234,7 @@ items:
       - '(asyncResult: Office.AsyncResult<AttachmentContent>) => void'
 - uid: outlook.Office.Item.getInitializationContextAsync
   summary: >-
-    获取[通过可操作邮件](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)<!-- -->激活加载项时传递的初始化数据。
+    获取[通过可操作邮件激活](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)加载项时传递的初始化数据<!-- -->.
 
 
     **注意**: 仅 outlook 2016 for Windows (大于16.0.8413.1000 的即点即用版本) 和适用于 Office 365 的 outlook 网页版支持此方法。
@@ -265,7 +265,7 @@ items:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: outlook.Office.Item.getInitializationContextAsync_1
   summary: >-
-    获取[通过可操作邮件](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)<!-- -->激活加载项时传递的初始化数据。
+    获取[通过可操作邮件激活](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)加载项时传递的初始化数据<!-- -->.
 
 
     **注意**: 仅 outlook 2016 for Windows (大于16.0.8413.1000 的即点即用版本) 和适用于 Office 365 的 outlook 网页版支持此方法。
@@ -472,7 +472,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -506,7 +506,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -545,7 +545,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -648,7 +648,7 @@ items:
     在 OWA 和 Outlook 中, webcasts&seriesid 返回此项所属的父 (系列) 项的 Exchange Web 服务 (EWS) ID。 但是, 在 iOS 和 Android 中, webcasts&seriesid 返回父项的 REST ID。
 
 
-    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅使用 outlook 外接<!-- -->[程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)。
+    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅[使用 outlook 外接程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->.
 
 
     对于不包含父项目 (如单个约会、系列项目或会议请求) 的项目, webcasts&seriesid 属性将返回 null, 并且对于不是会议请求的任何其他项目, 返回 "未定义"。
