--- a/docs/docs-ref-autogen/outlook_1_1/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.messagecompose.yml
@@ -1,13 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ca631c17bbbcdae6e1954a40ce800de9b69163a5
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: a73dbd1fe22ffb47470c543f4f5d822672a72b3d
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30199101"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656806"
 items:
 - uid: Outlook_1_1.Office.MessageCompose
-  summary: "\" [context.subname](xref:Outlook_1_1.Office.Item)<!-- -->\" 的邮件撰写模式。\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.1/office.context.mailbox.item)页。"
+  summary: >-
+    [Office](xref:Outlook_1_1.Office.Item)的邮件撰写模式。<!-- -->.
+
+
+    **重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 "context.subname" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.1/office.context.mailbox.item)页。
   name: Office.MessageCompose
   fullName: Office.MessageCompose
   langs:
@@ -37,10 +41,10 @@ items:
     将文件作为附件添加到邮件或约会。
 
 
-    addFileAttachmentAsync 方法在指定的 URI 上载文件并将其附加到撰写窗体中的项目。
+    addFileAttachmentAsync 方法在指定的 URI 处上载文件, 并将其附加到撰写窗体中的项目。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -107,11 +111,11 @@ items:
       description: ''
     parameters:
     - id: uri
-      description: 提供附加到邮件或约会的文件的位置的 URI。最大长度为 2048 个字符。
+      description: 提供附加到邮件或约会的文件的位置的 URI。 最大长度为 2048 个字符。
       type:
       - string
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: options
@@ -119,7 +123,7 @@ items:
       type:
       - 'Office.AsyncContextOptions & { isInline: boolean }'
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_1.Office.MessageCompose.addFileAttachmentAsync_1
@@ -127,10 +131,10 @@ items:
     将文件作为附件添加到邮件或约会。
 
 
-    addFileAttachmentAsync 方法在指定的 URI 上载文件并将其附加到撰写窗体中的项目。
+    addFileAttachmentAsync 方法在指定的 URI 处上载文件, 并将其附加到撰写窗体中的项目。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -148,15 +152,15 @@ items:
       description: ''
     parameters:
     - id: uri
-      description: 提供附加到邮件或约会的文件的位置的 URI。最大长度为 2048 个字符。
+      description: 提供附加到邮件或约会的文件的位置的 URI。 最大长度为 2048 个字符。
       type:
       - string
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_1.Office.MessageCompose.addItemAttachmentAsync
@@ -164,13 +168,13 @@ items:
     将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
 
-    addItemAttachmentAsync 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。如果您指定一个回调方法，此方法使用一个 asyncResult 参数调用，该参数包含一个附件标识符或代码，指示附加项目过程中出现的任何错误。您可以使用 options 参数将状态信息传递给回调方法（如果需要）。
+    addItemAttachmentAsync 方法将具有指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法, 则使用一个参数 asyncResult 调用方法, 该参数包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要, 可以使用 options 参数将状态信息传递给回调方法。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
-    如果 Office 外接程序在 Outlook Web App 中运行，则 addItemAttachmentAsync 方法可以将项目添加到项目（正在编辑的项目除外）中；然而，不支持也不建议这样做。
+    如果你的 Office 外接程序在 Outlook Web App 中运行, 则 addItemAttachmentAsync 方法可以将项目附加到您正在编辑的项目之外的项目中;但是, 不支持这种情况, 建议不要这样做。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -219,11 +223,11 @@ items:
       description: ''
     parameters:
     - id: itemId
-      description: 要附加的项目的 Exchange 标识符。最大长度为 100 个字符。
+      description: 要附加的项目的 Exchange 标识符。 最大长度为 100 个字符。
       type:
       - any
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: options
@@ -239,13 +243,13 @@ items:
     将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
 
-    addItemAttachmentAsync 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。如果您指定一个回调方法，此方法使用一个 asyncResult 参数调用，该参数包含一个附件标识符或代码，指示附加项目过程中出现的任何错误。您可以使用 options 参数将状态信息传递给回调方法（如果需要）。
+    addItemAttachmentAsync 方法将具有指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法, 则使用一个参数 asyncResult 调用方法, 该参数包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要, 可以使用 options 参数将状态信息传递给回调方法。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
-    如果 Office 外接程序在 Outlook Web App 中运行，则 addItemAttachmentAsync 方法可以将项目添加到项目（正在编辑的项目除外）中；然而，不支持也不建议这样做。
+    如果你的 Office 外接程序在 Outlook Web App 中运行, 则 addItemAttachmentAsync 方法可以将项目附加到您正在编辑的项目之外的项目中;但是, 不支持这种情况, 建议不要这样做。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -263,11 +267,11 @@ items:
       description: ''
     parameters:
     - id: itemId
-      description: 要附加的项目的 Exchange 标识符。最大长度为 100 个字符。
+      description: 要附加的项目的 Exchange 标识符。 最大长度为 100 个字符。
       type:
       - any
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: callback
@@ -279,10 +283,10 @@ items:
     异步加载所选项目上此外接程序的自定义属性。
 
 
-    自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 CustomProperties，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。
+    自定义属性基于每个应用、每个项目存储为键/值对。 此方法在回调中返回一个 CustomProperties 对象, 该对象提供用于访问特定于当前项目和当前加载项的自定义属性的方法。 自定义属性未在项目上加密，因此这不应用作安全存储。
 
 
-    自定义属性作为 asyncResult.value 属性中的 CustomProperties 对象提供。此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
+    自定义属性作为 asyncResult 属性中的 CustomProperties 对象提供。 此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -312,7 +316,7 @@ items:
     将附件从邮件或约会中删除。
 
 
-    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用，或者如果用户开始在内嵌窗体中撰写，则随后弹出的窗体中继续在单独的窗口撰写时，会话即结束。
+    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用程序时, 或者如果用户开始撰写内嵌窗体, 随后弹出窗体以继续在单独的窗口中。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -365,7 +369,7 @@ items:
     将附件从邮件或约会中删除。
 
 
-    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用，或者如果用户开始在内嵌窗体中撰写，则随后弹出的窗体中继续在单独的窗口撰写时，会话即结束。
+    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用程序时, 或者如果用户开始撰写内嵌窗体, 随后弹出窗体以继续在单独的窗口中。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -440,7 +444,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -515,7 +519,7 @@ items:
     如果在阅读窗体或撰写窗体的回复中激活邮件应用程序，则此属性可以获得一个整数值。如果用户随后更改了回复邮件的主题（若发送回复），则该邮件的对话 ID 将改变且之前获取的值将不适用。
 
 
-    对于撰写窗体的新项目，此属性获得一个 null 值。如果用户设置一个主题并保存该项目，conversationId 属性将返回一个值。
+    对于撰写窗体的新项目，此属性获得一个 null 值。 如果用户设置主题并保存项, 则 conversationId 属性将返回一个值。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -547,7 +551,7 @@ items:
     获取实例表示的项的类型。
 
 
-    itemType 属性返回其中一个 ItemType 枚举值，指示 item 对象实例是邮件还是约会。
+    itemtype 属性返回一个 itemType 枚举值, 指示 item 对象实例是邮件还是约会。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -581,10 +585,10 @@ items:
     获取或设置显示在项目的主题字段中的说明。
 
 
-    subject 属性获取或设置由电子邮件服务器发送项目时的整个主题。
+    subject 属性获取或设置由电子邮件服务器发送的项目的整个主题。
 
 
-    subject 属性返回一个 Subject 对象，该对象提供用于获取和设置主题的方法。
+    subject 属性返回一个 subject 对象, 该对象提供用于获取和设置主题的方法。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
