--- a/docs/docs-ref-autogen/outlook_1_5/office.body.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.body.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 61afc6ca4a9fb387e110d1449231240c4b5829b2
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: ff70f938c3c9dcc3acbc64b2a4a187f64c6b201f
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30198898"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656603"
 items:
 - uid: Outlook_1_5.Office.Body
   summary: >-
-    body 对象提供为邮件或约会添加和更新内容的方法。它在所选项的 body 属性中返回。
+    body 对象提供用于添加和更新邮件或约会的内容的方法。 它在选定项的 body 属性中返回。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -50,7 +50,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -89,7 +89,7 @@ items:
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 正文以 asyncResult.value 属性中请求的格式提供。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 在 asyncResult 属性中, 正文以请求的格式提供。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_5.Office.Body.getAsync_1
@@ -122,7 +122,7 @@ items:
       type:
       - Office.CoercionType
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 正文以 asyncResult.value 属性中请求的格式提供。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 在 asyncResult 属性中, 正文以请求的格式提供。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_5.Office.Body.getTypeAsync
@@ -149,7 +149,7 @@ items:
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 asyncResult.value 属性中的一个 CoercionType 值返回。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 CoercionType 属性中的一个值返回。
       type:
       - '(asyncResult: Office.AsyncResult<Office.CoercionType>) => void'
 - uid: Outlook_1_5.Office.Body.getTypeAsync_1
@@ -188,7 +188,7 @@ items:
       description: ''
     parameters:
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 asyncResult.value 属性中的一个 CoercionType 值返回。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 CoercionType 属性中的一个值返回。
       type:
       - '(asyncResult: Office.AsyncResult<Office.CoercionType>) => void'
 - uid: Outlook_1_5.Office.Body.prependAsync
@@ -199,7 +199,7 @@ items:
     prependAsync 方法在项正文的开头插入指定的字符串。 插入后, 光标将返回相对于插入内容的原始位置。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -233,7 +233,7 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 将插入到正文开头的字符串。字符串大小限制为 1,000,000 个字符。
+      description: 将插入到正文开头的字符串。 字符串大小限制为 1,000,000 个字符。
       type:
       - string
     - id: options
@@ -252,7 +252,7 @@ items:
     prependAsync 方法在项正文的开头插入指定的字符串。 插入后, 光标将返回相对于插入内容的原始位置。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -270,7 +270,7 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 将插入到正文开头的字符串。字符串大小限制为 1,000,000 个字符。
+      description: 将插入到正文开头的字符串。 字符串大小限制为 1,000,000 个字符。
       type:
       - string
     - id: callback
@@ -285,7 +285,7 @@ items:
     使用 HTML 格式的正文时, 请务必注意 getAsync 和 setAsync 方法不是幂等。 从 getAsync 方法返回的值并不一定与之前在 setAsync 方法中传递的值完全相同。 客户端可以修改传递给 setAsync 的值, 以使其能够通过其呈现引擎高效呈现。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -335,7 +335,7 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: options
@@ -354,7 +354,7 @@ items:
     使用 HTML 格式的正文时, 请务必注意 getAsync 和 setAsync 方法不是幂等。 从 getAsync 方法返回的值并不一定与之前在 setAsync 方法中传递的值完全相同。 客户端可以修改传递给 setAsync 的值, 以使其能够通过其呈现引擎高效呈现。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -372,7 +372,7 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: callback
@@ -384,10 +384,10 @@ items:
     将正文中的所选内容更换为指定文本。
 
 
-    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从不在项的正文中, 或者如果项的正文在 UI 中失去焦点, 该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
+    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -421,7 +421,7 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: options
@@ -437,10 +437,10 @@ items:
     将正文中的所选内容更换为指定文本。
 
 
-    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从不在项的正文中, 或者如果项的正文在 UI 中失去焦点, 该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
+    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -458,7 +458,7 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: callback
