--- a/docs/docs-ref-autogen/outlook_1_7/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.appointmentread.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0c6eefc598e257ea2119dd97eb5ca51d1905a45d
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: 5991c252d81c1da1b35e3c6b1b039d67c23a3f96
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30199751"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656974"
 items:
 - uid: Outlook_1_7.Office.AppointmentRead
-  summary: "\" [context.subname](xref:Outlook_1_7.Office.Item)<!-- -->\" 的约会与会者模式。\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.7/office.context.mailbox.item)页。"
+  summary: "\"Office\" 的约会与会者模式: \"邮箱\"。[项目](xref:Outlook_1_7.Office.Item)<!-- -->.\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.7/office.context.mailbox.item)页。"
   name: Office.AppointmentRead
   fullName: Office.AppointmentRead
   langs:
@@ -55,7 +55,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -77,7 +77,7 @@ items:
       type:
       - Office.EventType
     - id: handler
-      description: 处理事件的函数。 函数必须接受单个参数, 该参数是对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
+      description: 用于处理事件的函数。 此函数必须接受一个参数，即对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
       type:
       - any
     - id: options
@@ -93,7 +93,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -115,7 +115,7 @@ items:
       type:
       - Office.EventType
     - id: handler
-      description: 处理事件的函数。 函数必须接受单个参数, 该参数是对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
+      description: 用于处理事件的函数。 此函数必须接受一个参数，即对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
       type:
       - any
     - id: callback
@@ -130,10 +130,10 @@ items:
     在 Outlook Web App 中，答复窗体显示为包含 3 列视图的弹出式窗体以及包含 2 列或 1 列视图的弹出式窗体。
 
 
-    如果任意字符串参数超出其限制，displayReplyAllForm 将引发异常。
+    如果任何字符串参数超出其限制, displayReplyAllForm 将引发异常。
 
 
-    当在 formData.attachments 参数中指定附件时，Outlook 和 Outlook Web App 尝试下载所有附件并将其附加到答复窗体。如果无法添加任何附件，则在窗体 UI 中显示错误。如果这不可能，则不引发错误消息。
+    当附件在 formData 参数中指定时, outlook 和 outlook Web App 尝试下载所有附件并将其附加到答复窗体。 如果无法添加任何附件，则在窗体 UI 中显示错误。 如果这不可能，则不引发错误消息。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -259,10 +259,10 @@ items:
     在 Outlook Web App 中，答复窗体显示为包含 3 列视图的弹出式窗体以及包含 2 列或 1 列视图的弹出式窗体。
 
 
-    如果任意字符串参数超出其限制，displayReplyForm 将引发异常。
+    如果任何字符串参数超出其限制, displayReplyForm 将引发异常。
 
 
-    当在 formData.attachments 参数中指定附件时，Outlook 和 Outlook Web App 尝试下载所有附件并将其附加到答复窗体。如果无法添加任何附件，则在窗体 UI 中显示错误。如果这不可能，则不引发错误消息。
+    当附件在 formData 参数中指定时, outlook 和 outlook Web App 尝试下载所有附件并将其附加到答复窗体。 如果无法添加任何附件，则在窗体 UI 中显示错误。 如果这不可能，则不引发错误消息。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -428,7 +428,7 @@ items:
     当使用此方法的最低权限级别受限时，某些实体类型需要 ReadItem 才能进行访问，如下表中所指定。
 
 
-    <table> <tr> <th>entityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>Address</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>联系人</td> <td>联系人</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>字符串</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
+    <table> <tr> <th>entityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>联系人</td> <td>联系人</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
 
     #### 示例
 
@@ -475,7 +475,7 @@ items:
     返回传递清单 XML 文件中定义的命名筛选器的所选项目中的已知实体。
 
 
-    getFilteredEntitiesByName 方法返回匹配在具有指定 FilterName 元素值的清单 XML 文件中的 ItemHasKnownEntity 规则元素中定义的正则表达式的实体。
+    getFilteredEntitiesByName 方法返回与在清单 XML 文件中的 ItemHasKnownEntity rule 元素中定义的正则表达式匹配的实体, 具有指定的 FilterName 元素值。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -493,10 +493,10 @@ items:
     return:
       type:
       - (string | Contact | MeetingSuggestion | PhoneNumber | TaskSuggestion)[]
-      description: 如果具有匹配 name 参数的 FilterName 元素值的清单中没有任何 ItemHasKnownEntity 元素，则该方法返回 null。如果 name 参数匹配清单中的 ItemHasKnownEntity 元素，但在匹配的当前项目中没有实体，则该方法返回一个空数组。
+      description: 如果清单中没有 ItemHasKnownEntity 元素与 name 参数匹配的 FilterName 元素值, 则该方法返回 null。 如果 name 参数与清单中的 ItemHasKnownEntity 元素匹配, 但当前项目中没有匹配的实体, 则该方法将返回一个空数组。
     parameters:
     - id: name
-      description: 定义筛选器匹配的 ItemHasKnownEntity 规则元素的名称。
+      description: 定义要匹配的筛选器的 ItemHasKnownEntity 规则元素的名称。
       type:
       - string
 - uid: Outlook_1_7.Office.AppointmentRead.getRegExMatches
@@ -504,10 +504,10 @@ items:
     返回所选项目中匹配在清单 XML 文件中定义的正则表达式的字符串值。
 
 
-    getRegExMatches 方法返回匹配在清单 XML 文件中的每个 ItemHasRegularExpressionMatch 或 ItemHasKnownEntity 规则元素中定义的正则表达式的字符串。对于 ItemHasRegularExpressionMatch 规则，匹配字符串必须发生在该规则指定的项目的属性中。PropertyName 简单类型定义支持的属性。
+    getRegExMatches 方法返回匹配在清单 XML 文件中的每个 ItemHasRegularExpressionMatch 或 ItemHasKnownEntity 规则元素中定义的正则表达式的字符串。 对于 ItemHasRegularExpressionMatch 规则, 匹配的字符串必须出现在由该规则指定的项的属性中。 PropertyName 简单类型定义受支持的属性。
 
 
-    如果在项目的正文属性上指定 ItemHasRegularExpressionMatch 规则，则正则表达式应进一步筛选正文并应尝试返回该项目的整个正文。使用正则表达式（如 .*）获取项目的整个正文并不总是返回预期的结果。而是使用 Body.getAsync 方法检索整个正文。
+    如果您在项目的 body 属性上指定 ItemHasRegularExpressionMatch 规则, 则正则表达式应进一步筛选正文, 并且不应尝试返回项目的整个正文。 使用正则表达式 (如. *) 获取项目的整个正文并不总是返回预期的结果。 而是使用 getAsync 方法检索整个正文。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -573,16 +573,16 @@ items:
     return:
       type:
       - any
-      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。每个数组的名称等于匹配 ItemHasRegularExpressionMatch 规则的 RegExName 属性或匹配 ItemHasKnownEntity 规则的 FilterName 属性的相应值。
+      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。 每个数组的名称等于匹配的 ItemHasRegularExpressionMatch 规则的 RegExName 属性的相应值或匹配 ItemHasKnownEntity 规则的 FilterName 属性的值。
 - uid: Outlook_1_7.Office.AppointmentRead.getRegExMatchesByName
   summary: >-
     返回匹配在清单 XML 文件中定义的命名正则表达式的所选项目中的字符串值。
 
 
-    getRegExMatchesByName 方法返回匹配在具有指定 RegExName 元素值的清单 XML 文件中的 ItemHasRegularExpressionMatch 规则元素中定义的正则表达式的字符串。
+    getRegExMatchesByName 方法返回与在清单 XML 文件中的 ItemHasRegularExpressionMatch rule 元素中定义的正则表达式匹配的字符串, 该正则表达式具有指定的 RegExName 元素值。
 
 
-    如果在项目的正文属性上指定 ItemHasRegularExpressionMatch 规则，则正则表达式应进一步筛选正文并应尝试返回该项目的整个正文。使用正则表达式（如 .*）获取项目的整个正文并不总是返回预期的结果。
+    如果您在项目的 body 属性上指定 ItemHasRegularExpressionMatch 规则, 则正则表达式应进一步筛选正文, 并且不应尝试返回项目的整个正文。 使用正则表达式 (如. *) 获取项目的整个正文并不总是返回预期的结果。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -643,12 +643,12 @@ items:
       description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串的数组。
     parameters:
     - id: name
-      description: 定义筛选器匹配的 ItemHasRegularExpressionMatch 规则元素的名称。
+      description: 定义要匹配的筛选器的 ItemHasRegularExpressionMatch 规则元素的名称。
       type:
       - string
 - uid: Outlook_1_7.Office.AppointmentRead.getSelectedEntities
   summary: >-
-    获取在用户已选择的突出显示匹配项中找到的实体。突出显示匹配项适用于上下文加载项。
+    获取在用户已选择的突出显示匹配项中找到的实体。 突出显示的匹配项适用于上下文外接程序。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -683,13 +683,13 @@ items:
       description: ''
 - uid: Outlook_1_7.Office.AppointmentRead.getSelectedRegExMatches
   summary: >-
-    返回突出显示匹配项中匹配在清单 XML 文件中定义的正则表达式的字符串值。突出显示匹配项适用于上下文外接程序。
+    返回突出显示匹配项中匹配在清单 XML 文件中定义的正则表达式的字符串值。 突出显示的匹配项适用于上下文外接程序。
 
 
     office.context.mailbox.item.getselectedregexmatches 方法返回匹配在清单 XML 文件中的每个 ItemHasRegularExpressionMatch 或 ItemHasKnownEntity 规则元素中定义的正则表达式的字符串。 对于 ItemHasRegularExpressionMatch 规则, 匹配的字符串必须出现在由该规则指定的项的属性中。 PropertyName 简单类型定义受支持的属性。
 
 
-    如果在项目的正文属性上指定 ItemHasRegularExpressionMatch 规则，则正则表达式应进一步筛选正文并应尝试返回该项目的整个正文。使用正则表达式（如 .*）获取项目的整个正文并不总是返回预期的结果。而是使用 Body.getAsync 方法检索整个正文。
+    如果您在项目的 body 属性上指定 ItemHasRegularExpressionMatch 规则, 则正则表达式应进一步筛选正文, 并且不应尝试返回项目的整个正文。 使用正则表达式 (如. *) 获取项目的整个正文并不总是返回预期的结果。 而是使用 getAsync 方法检索整个正文。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -727,16 +727,16 @@ items:
     return:
       type:
       - any
-      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。每个数组的名称等于匹配 ItemHasRegularExpressionMatch 规则的 RegExName 属性或匹配 ItemHasKnownEntity 规则的 FilterName 属性的相应值。
+      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。 每个数组的名称等于匹配的 ItemHasRegularExpressionMatch 规则的 RegExName 属性的相应值或匹配 ItemHasKnownEntity 规则的 FilterName 属性的值。
 - uid: Outlook_1_7.Office.AppointmentRead.loadCustomPropertiesAsync
   summary: >-
     异步加载所选项目上此外接程序的自定义属性。
 
 
-    自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 CustomProperties，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。
+    自定义属性基于每个应用、每个项目存储为键/值对。 此方法在回调中返回一个 CustomProperties 对象, 该对象提供用于访问特定于当前项目和当前加载项的自定义属性的方法。 自定义属性未在项目上加密，因此这不应用作安全存储。
 
 
-    自定义属性作为 asyncResult.value 属性中的 CustomProperties 对象提供。此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
+    自定义属性作为 asyncResult 属性中的 CustomProperties 对象提供。 此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -766,7 +766,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -800,7 +800,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。
+    目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -827,7 +827,7 @@ items:
       - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.AppointmentRead.attachments
   summary: >-
-    获取项目的附件作为数组。
+    以数组的形式获取项目的附件。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -835,7 +835,7 @@ items:
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会与会者</td></tr> </table>
 
 
-    **注意**: 由于潜在的安全问题, Outlook 阻止了某些类型的文件, 因此不会返回这些文件。 有关详细信息, 请参阅<!-- --> [Outlook 中的阻止附件](https://support.office.com/article/Blocked-attachments-in-Outlook-434752E1-02D3-4E90-9124-8B81E49A8519)。
+    **注意**: 由于潜在的安全问题, Outlook 阻止了某些类型的文件, 因此不会返回这些文件。 有关详细信息, 请参阅[Outlook 中阻止的附件](https://support.office.com/article/Blocked-attachments-in-Outlook-434752E1-02D3-4E90-9124-8B81E49A8519)<!-- -->.
 
     #### <a name="examples"></a>示例
 
@@ -890,7 +890,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -920,7 +920,7 @@ items:
       - Body
 - uid: Outlook_1_7.Office.AppointmentRead.dateTimeCreated
   summary: >-
-    获取项创建的日期和时间。
+    获取项目创建的日期和时间。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -949,7 +949,7 @@ items:
       - Date
 - uid: Outlook_1_7.Office.AppointmentRead.dateTimeModified
   summary: >-
-    获取项最近一次修改的日期和时间。
+    获取项目最近一次修改的日期和时间。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -987,7 +987,7 @@ items:
     end 属性是以协调世界时 (UTC) 日期和时间值表示的 date 对象。 您可以使用 convertToLocalClientTime 方法将 end 属性值转换为客户端的本地日期和时间。
 
 
-    使用 Time.setAsync 方法设置结束时间时，应使用 convertToUtcClientTime 方法将客户端的本地时间转换为服务器的 UTC。
+    使用 setAsync 方法设置结束时间时, 应使用 convertToUtcClientTime 方法将客户端上的本地时间转换为服务器的 UTC。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1019,7 +1019,7 @@ items:
     获取选定项目的 Exchange Web 服务项目类。
 
 
-    您可以创建用于扩展默认邮件类别的自定义邮件类别，例如，自定义约会邮件类别 IPM.Appointment.Contoso。
+    您可以创建扩展默认邮件类别的自定义邮件类别, 例如, 自定义约会邮件类 IPM。Contoso。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1027,10 +1027,10 @@ items:
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会与会者</td></tr> </table>
 
 
-    itemClass 属性指定所选项目的邮件类别。以下是邮件或约会项目的默认邮件类别。
+    itemClass 属性指定选定项目的邮件类。 以下是邮件或约会项目的默认邮件类别。
 
 
-    <table> <tr> <th>类型</th> <th>说明</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>ipm.note.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>这些项目包括具有默认邮件类别 IPM.Note 的电子邮件，以及使用 IPM.Schedule.Meeting 作为基础邮件类别的会议请求、响应和取消。</td> <td>ipm.note.请注意, IPM。Schedule (会议) 请求, IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排: 会议, IPM。日程安排. 会议. 已取消</td> </tr> </table>
+    <table> <tr> <th>类型</th> <th>说明</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>ipm.note.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>其中包括具有默认邮件类别 IPM 的电子邮件。注意, 以及使用 IPM 的会议请求、响应和取消。Schedule: 作为基本邮件类的会议。</td> <td>ipm.note.请注意, IPM。Schedule (会议) 请求, IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排: 会议, IPM。日程安排. 会议. 已取消</td> </tr> </table>
 
     #### 示例
 
@@ -1060,7 +1060,7 @@ items:
     itemId 属性在撰写模式中不可用。 如果需要项目标识符, 则可以使用 saveAsync 方法将项目保存到存储区, 这将在回调函数的 asyncResult 参数中返回项目标识符。
 
 
-    **注意**: itemId 属性返回的标识符与 Exchange Web 服务项目标识符相同。 itemId 属性与 outlook 条目 ID 或 outlook REST API 使用的 id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅使用 outlook 外接<!-- -->[程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api#get-the-item-id)。
+    **注意**: itemId 属性返回的标识符与 Exchange Web 服务项目标识符相同。 itemId 属性与 outlook 条目 ID 或 outlook REST API 使用的 id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅[使用 outlook 外接程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api#get-the-item-id)<!-- -->.
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1104,7 +1104,7 @@ items:
     获取实例表示的项的类型。
 
 
-    itemType 属性返回其中一个 ItemType 枚举值，指示 item 对象实例是邮件还是约会。
+    itemtype 属性返回一个 itemType 枚举值, 指示 item 对象实例是邮件还是约会。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1170,7 +1170,7 @@ items:
     获取项目的主题, 删除所有前缀 (包括 RE: 和 FWD:)。
 
 
-    normalizedSubject 属性获取包含由电子邮件程序添加的任何标准前缀（如 RE: 和 FW:）的项目主题。若要获取包含完整前缀的项目主题，请使用 subject 属性。
+    normalizedSubject 属性获取项目的主题, 其中包含任何标准前缀 (如 RE: 和 FW:)由电子邮件程序添加的。 若要获取具有完整前缀的项的主题, 请使用 subject 属性。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1295,10 +1295,10 @@ items:
       - EmailAddressDetails
 - uid: Outlook_1_7.Office.AppointmentRead.recurrence
   summary: >-
-    获取约会的定期模式。 获取或设置会议请求的定期模式。
+    获取约会的定期模式。 获取会议请求的定期模式。
 
 
-    如果项目是系列或系列中的实例, 则定期属性将返回定期约会或会议请求的定期对象。 针对单个约会和单个约会的会议请求返回 `null`。
+    如果项目是系列或系列中的实例, 则定期属性将返回定期约会或会议请求的定期对象。 `null`返回单个约会的单个约会和会议请求。
 
 
     **注意**: 会议请求的 itemClass 值为 IPM。Schedule. 会议请求。
@@ -1365,13 +1365,13 @@ items:
       - EmailAddressDetails[]
 - uid: Outlook_1_7.Office.AppointmentRead.seriesId
   summary: >-
-    获取实例所属的系列的 ID。
+    获取实例所属的系列的 id。
 
 
     在 OWA 和 Outlook 中, webcasts&seriesid 返回此项所属的父 (系列) 项的 Exchange Web 服务 (EWS) ID。 但是, 在 iOS 和 Android 中, webcasts&seriesid 返回父项的 REST ID。
 
 
-    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅使用 outlook 外接<!-- -->[程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)。
+    **注意**: webcasts&seriesid 属性返回的标识符与 Exchange Web 服务项目标识符相同。 webcasts&seriesid 属性与 outlook REST API 使用的 outlook id 不相同。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关更多详细信息, 请参阅[使用 outlook 外接程序中的 outlook REST api](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->.
 
 
     对于不包含父项目 (如单个约会、系列项目或会议请求) 的项目, webcasts&seriesid 属性将返回 null, 并且对于不是会议请求的任何其他项目, 返回 "未定义"。
@@ -1426,10 +1426,10 @@ items:
     获取项目的 "主题" 字段中显示的说明。
 
 
-    subject 属性获取或设置由电子邮件服务器发送项目时的整个主题。
+    subject 属性获取或设置由电子邮件服务器发送的项目的整个主题。
 
 
-    subject 属性返回一个字符串。使用 normalizedSubject 属性获取不带任何前导前缀（如 RE: 和 FW:）的主题。
+    subject 属性返回一个字符串。 使用 normalizedSubject 属性可获取主题减去任何前导前缀, 如 RE: 和 FW:。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
