--- a/docs/docs-ref-autogen/outlook_1_7/office.body.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.body.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4c448a5030ee50d1b3ed16abeb46da1fac1550e0
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: 58286f9cd0f51511ded622942cb3b27baad91c08
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30198289"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656624"
 items:
 - uid: Outlook_1_7.Office.Body
   summary: >-
@@ -50,7 +50,7 @@ items:
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -199,7 +199,7 @@ items:
     prependAsync 方法在项正文的开头插入指定的字符串。 插入后, 光标将返回相对于插入内容的原始位置。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -252,7 +252,7 @@ items:
     prependAsync 方法在项正文的开头插入指定的字符串。 插入后, 光标将返回相对于插入内容的原始位置。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -285,7 +285,7 @@ items:
     使用 HTML 格式的正文时, 请务必注意 getAsync 和 setAsync 方法不是幂等。 从 getAsync 方法返回的值并不一定与之前在 setAsync 方法中传递的值完全相同。 客户端可以修改传递给 setAsync 的值, 以使其能够通过其呈现引擎高效呈现。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -354,7 +354,7 @@ items:
     使用 HTML 格式的正文时, 请务必注意 getAsync 和 setAsync 方法不是幂等。 从 getAsync 方法返回的值并不一定与之前在 setAsync 方法中传递的值完全相同。 客户端可以修改传递给 setAsync 的值, 以使其能够通过其呈现引擎高效呈现。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -387,7 +387,7 @@ items:
     document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -440,7 +440,7 @@ items:
     document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
 
 
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
+    在 HTML 标记中添加链接时, 可以通过在锚点上设置 id 属性禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (有关示例, 请参阅 "示例" 部分)。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
